--- a/resources/index.html
+++ b/resources/index.html
@@ -306,6 +306,82 @@
                     </ul>
                 </div>
             </section>
+            <section class="leader">
+                <h2>Our Company Top Leaders</h2>
+                <div class="container">
+                    <ul class="leader-list">
+                        <li>
+                            <div class="leader-item-text">
+                                <h4>Robert Martin</h4>
+                                <small>founder</small>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus ratione expedita quos magnam nulla alias sed tenetur quisquam ?
+                                </p>
+                            </div>
+                            <div class="leader-item-image">
+                                <img src="images/human01.jfif" alt="">
+                                <ul class="leader-icons">
+                                    <li>
+                                        <i class="fab fa-facebook-f facebook"></i>
+                                    </li>
+                                    <li><i class="fab fa-twitter twitter"></i></li>
+                                    <li>
+                                        <i class="fab fa-google-plus-g google"></i>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="leader-item-text">
+                                <h4>poul anderson</h4>
+                                <small>co-founder</small>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus ratione expedita quos magnam nulla alias sed tenetur quisquam doloribus? Esse recusandae
+                                </p>
+                            </div>
+                            <div class="leader-item-image">
+                                <img src="images/human05.jfif" alt="">
+                                <ul class="leader-icons">
+                                    <li><i class="fab fa-facebook-f facebook"></i></li>
+                                    <li><i class="fab fa-twitter twitter"></i></li>
+                                    <li><i class="fab fa-linkedin-in linkedin"></i></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="leader-item-text">
+                                <h4>jhon hamster</h4>
+                                <small>co-founder</small>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus ratione expedita quos magnam nulla alias sed tenetur quisquam ?
+                                </p>
+                            </div>
+                            <div class="leader-item-image">
+                                <img src="images/human06.jfif" alt="">
+                                <ul class="leader-icons">
+                                    <li><i class="fab fa-facebook-f facebook"></i></li>
+                                    <li><i class="fab fa-twitter twitter"></i></li>
+                                    <li><i class="fab fa-google-plus-g google"></i></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="leader-item-text">
+                                <h4>maria ustinova</h4>
+                                <small>marketing promoter</small>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus ratione expedita quos magnam nulla alias sed tenetur quisquam doloribus? Esse recusandae
+                                </p>
+                            </div>
+                            <div class="leader-item-image">
+                                <img src="images/human01.jfif" alt="">
+                                <ul class="leader-icons">
+                                    <li><i class="fab fa-facebook-f facebook"></i></li>
+                                    <li><i class="fab fa-twitter twitter"></i></li>
+                                    <li><i class="fab fa-google-plus-g google"></i></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </section>
             <section class="video">
                 <div class="container">
                     <div class="video-container">
