--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
     <link rel="stylesheet" href="css/app.css">
+
     <title>Document</title>
 </head>
 
-<body>
+<body onload="showSlide(1);
+loopSlide(1);
+showFeedback(4);">
     <header>
         <div class="container">
             <div class="contact">
@@ -474,7 +477,7 @@
                 <div class="container">
                     <ul class="activities-list row">
                         <li class="col-12 col-sm">
-                            <div class="image-box" style="background-image: url('../images/project6.jpg'); background-size: cover;">
+                            <div class="image-box" style="background-image: url('images/project6.jpg'); background-size: cover;">
                                 .
                                 <span>15 March 2017</span>
                             </div>
@@ -485,7 +488,7 @@
                             </div>
                         </li>
                         <li class="col-12 col-sm">
-                            <div class="image-box" style="background-image: url('../images/project6.jpg'); background-size: cover;">
+                            <div class="image-box" style="background-image: url('images/project6.jpg'); background-size: cover;">
 
                                 <span>15 March 2017</span>
                             </div>
@@ -496,7 +499,7 @@
                             </div>
                         </li>
                         <li class="col-12 col-md-4">
-                            <div class="image-box" style="background-image: url('../images/project6.jpg'); background-size: cover;">
+                            <div class="image-box" style="background-image: url('images/project6.jpg'); background-size: cover;">
 
                                 <span>15 March 2017</span>
                             </div>
